fix alignment

--- a/app/assets/stylesheets/app_width.css.scss
+++ b/app/assets/stylesheets/app_width.css.scss
@@ -43,6 +43,7 @@ span.fontsmall {
   position:fixed;
   bottom:0px;
   top:60px;
+  padding-top:10px;
 
   h1#superheader {
     font-size:65px;
